crates/math-core/tests/snapshots/error_test__unsupported_color_html_short.snap
---
source: crates/math-core/tests/error_test.rs
expression: "{\\color[HTML]{f0a}x^2}"
---
Error: Unknown color "f0a".
   ╭─[ <input>:1:14 ]
   │
 1 │ {\color[HTML]{f0a}x^2}
   │              ──┬──  
   │                ╰──── unknown color
───╯
